--- a/event_manager/src/App.css
+++ b/event_manager/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  margin: 25px;
 }
 
 .App-logo {
@@ -30,4 +31,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+body {
+  font-family: Arial;
 }
